allow stateless sessions on these repositories